views: clarify what Resources we show in the polybox

--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -46,7 +46,7 @@
   #ui-resources-list-container.ui-container.midtone.rounded-bottom
     .ui-container.inverted.ui-toolbar.pvx
       .ui-toolbar-header.pls
-        TODO
+        MediaResources in Collection:
     .ui-resources-holder.pam
       .ui-container.table.auto
         .ui-container.table-cell.table-substance
