--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -21,7 +21,7 @@
   #ui-resources-list-container.ui-container.midtone.rounded-bottom
     .ui-container.inverted.ui-toolbar.pvx
       .ui-toolbar-header.pls
-        TODO
+        Entrusted MediaResources:
     .ui-resources-holder.pam
       .ui-container.table.auto
         .ui-container.table-cell.table-substance
