view: my_dashboard: only show section if any media_resources
- fallback text if it would be empty

--- a/app/views/my/_section_filter_demo.html.haml
+++ b/app/views/my/_section_filter_demo.html.haml
@@ -1,3 +1,6 @@
+- unless params[:section] == 'filter_demo'
+  - return nil # don't show on main dashboard (index)
+
 :ruby
   # fake:
   # entries = MediaEntry
