css: tiles: don't stretch in horizontal list
- center thumbnail if too narrow
- circular fading background
- set white background (for img for images with transparency)

[delivers #89864088]

--- a/app/assets/stylesheets/combos/_ui-resources-tiles.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-tiles.sass
@@ -48,6 +48,7 @@
 
   .ui-tile__image
     +dimension(100%,auto)
+    background-color: white // for images with transparency
 
   &.large
     .ui-resources-page-items
@@ -92,18 +93,21 @@
   .ui-tile
     .ui-tile__image
       +dimension(auto, 200px)
+      min-width: auto
 
   &.small
     height: 210px
     .ui-tile
       .ui-tile__image
         +dimension(auto, 125px)
+        min-width: auto
 
   &.large
     height: 385px
     .ui-tile
       .ui-tile__image
         +dimension(auto, 300px)
+        min-width: auto
 /* Layout switching
  *-----------------------------------------
 
