--- a/app/assets/stylesheets/components/_ui-tiles.sass
+++ b/app/assets/stylesheets/components/_ui-tiles.sass
@@ -29,6 +29,8 @@
 .ui-tile__body
   line-height: 0
   background-color: rgba(0, 0, 0, 0.3)
+  box-shadow: 0 0 150px hsl(0, 0%, 34%) inset
+  text-align: center // for narrow thumbnails
 
 .ui-tile__head
   +position-top-left(0,0)
@@ -106,6 +108,7 @@
 
 .ui-tile__thumbnail
   display: block
+  vertical-align: middle
 
 .ui-tile__image
   height: 400px
