--- a/app/views/admin/vocabularies/_vocabulary.html.haml
+++ b/app/views/admin/vocabularies/_vocabulary.html.haml
@@ -2,10 +2,11 @@
   %td= vocabulary
   %td= vocabulary.label
   %td= vocabulary.description
-  %td.active.col-xs-5
-    .btn-group
+  %td.active
+    .btn-group.btn-group-vertical
       = link_to admin_vocabulary_path(vocabulary), class: 'btn btn-default btn-sm' do
         %i.glyphicon.glyphicon-eye-open
+        Details
       = render partial: 'action_buttons', locals: { vocabulary: vocabulary, size: 'btn-sm' }
       = link_to "MetaKeys: #{vocabulary.meta_keys_count}",
           admin_meta_keys_path(vocabulary_id: vocabulary.id),
