app: semantic version: generate from git tags, use via const
Usage: none. Just make a new git tag for each release, in most cases using the generated string. Once the tag is in a branch, the script will output a new valid version.

Squashed commit of the following:

commit 32c22760338e41becb372ee2fc4a05745683eb2d
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 19:53:54 2015 +0200

    fixup! deco: semver: adjust to and use new config hash

commit 3b4a5d5fc7253cc408478eca7439702762073690
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 18:58:58 2015 +0200

    deco: semver: adjust to and use new config hash

commit 000c353f95eb1e14d43d20174d4f53b8f1e80bc0
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 17:59:32 2015 +0200

    ci: check out submodules for all Rails tests

commit 7f1fe4c62b120a9c05c82173686b14fa5966d403
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 17:51:07 2015 +0200

    config:get semver from script, remove from settings.yml

commit 4c3f2fd16052000c199d3f69341d1dd566c4f76c
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 17:50:20 2015 +0200

    bin: add script to get current semver as JSON

commit 8e329ab44f69d0886f9fa59dd48af844a3be8230
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 17:48:45 2015 +0200

    submodules: add lib/git-describe-semver

--- a/app/ui_elements/decorators/semver.haml
+++ b/app/ui_elements/decorators/semver.haml
@@ -6,37 +6,55 @@
   # TODO: move this to shared components
 
   example_locals = {
-    version: {
+    semver: {
+      # required:
       major: 1,
-      minor: 1,
-      patch: 1,
-      pre: 'beta.3',
-      build: 'abcd1234'
+      minor: 2,
+      patch: 3,
+      # optional, but must be array
+      prerelease: ['beta', '3'],
+      build: ['gabcd1234', 'somethingelse42']
     },
     prefix: 'v'
   }
-  version ||= version
+
+  version ||= semver
   prefix ||= prefix
-  unless (version.is_a? Hash \
-    and version[:major] and version[:minor] and version[:patch])
-    throw 'ui: semver: bad version config!'
+  unless (version.is_a?(Hash) \
+    && (version = OpenStruct.new(semver)) \
+    && version.major && version.minor && version.patch \
+    && (version.prerelease || version.prerelease.is_a?(Array)) \
+    && (version.build || version.build.is_a?(Array)))
+    throw 'ui: semver: invalid config hash!'
   end
 
 %span.semantic-version<>
+
   = prefix
+
   %span.major<>
-    =Settings.release.version_major.to_s
+    = version.major
+
   %span.minor<>
     %span.divider<>='.'
-    =Settings.release.version_minor.to_s
+    = version.minor
+
   %span.minor<>
     %span.divider<>='.'
-    =Settings.release.version_patch.to_s
-  - if Settings.release.version_pre.present?
+    = version.patch.to_s
+
+  - if version.prerelease
     %span.version<>
       %span.divider<>='-'
-      =Settings.release.version_pre.to_s
-  - if Settings.release.version_build.present?
+      - (fields = version.prerelease).each do |field|
+        %span.field<>= field
+        - unless field === fields.last
+          %span.divider<>='.'
+
+  - if version.build
     %span.build<>
       %span.divider<>='+'
-      =Settings.release.version_build.to_s
+      - (fields = version.build).each do |field|
+        %span.field<>= field
+        - unless field === fields.last
+          %span.divider<>='.'
