admin: Fix Vocables -> Keywords
The recent migration unifying the vocables with keywords broke some things in the Admin Interface because there are no vocables any more.

[delivers #91582266]

Squashed commit of the following:
commit 6107e245c2065c28dba93d771db73f06a8323c1a
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Fri Apr 17 13:39:07 2015 +0200

    fix fkey name, add cascade action when keyword term is deleted

commit a80694de4bef9f725575f1d07548b7d20bd20f8c
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Fri Apr 17 11:30:43 2015 +0200

    fix vocables -> keywords unification

commit 37fc7e0027b5b357399cb037be3451a1948ac47b
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Thu Apr 16 10:48:36 2015 +0200

    fix admin tests

commit e9dcfa3cbab749ba32e1532e7d0c88fc2bc432c3
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Tue Mar 17 09:23:51 2015 +0100

    Admin interface: extend Meta Keys form with new fields

--- a/app/views/admin/keyword_terms/index.html.haml
+++ b/app/views/admin/keyword_terms/index.html.haml
@@ -1,6 +1,6 @@
 .page-header
   %h1
-    Vocables
+    Keyword Terms
     %small Vocabulary: #{@vocabulary.id}
 
 .row
@@ -9,17 +9,17 @@
       .panel-heading
         .panel-title Filters
       .panel-body
-        = form_tag admin_vocabulary_vocables_path(@vocabulary), method: :get, class: 'form-inline' do
+        = form_tag admin_vocabulary_keyword_terms_path(@vocabulary), method: :get, class: 'form-inline' do
           .form-group
             = text_field_tag :search_term, params[:search_term], size: 50,
               class: 'form-control', placeholder: 'ID, term or MetaKey'
 
           = submit_tag 'Apply', class: 'btn btn-primary'
-          = link_to 'Reset', admin_vocabulary_vocables_path(@vocabulary), class: 'btn btn-default'
+          = link_to 'Reset', admin_vocabulary_keyword_terms_path(@vocabulary), class: 'btn btn-default'
     .btn-group
-      = link_to new_admin_vocabulary_vocable_path(@vocabulary), class: 'btn btn-default' do
+      = link_to new_admin_vocabulary_keyword_term_path(@vocabulary), class: 'btn btn-default' do
         %i.glyphicon.glyphicon-plus
-        Create vocable
+        Create Keyword Term
 
 .row
   .col-xs-12
@@ -31,6 +31,6 @@
           %th Term
           %th
       %tbody
-        = render @vocables
+        = render @keyword_terms
 
-= paginate @vocables
+= paginate @keyword_terms
