--- a/app/views/admin/groups/index.html.haml
+++ b/app/views/admin/groups/index.html.haml
@@ -23,10 +23,9 @@
       
           .form-group
             = label_tag :type, 'Type of'
-            = select_tag :type, options_for_select([['All', ''],
-              ['Group', :group],
-              ['InstitutionalGroup', :institutional_group]],
-            params[:type]), {class: 'form-control'}
+            = select_tag :type,
+                options_for_select(['', Group.types].flatten, params[:type]),
+                class: 'form-control'
       
           .form-group
             = submit_tag 'Apply', class: 'btn btn-primary'
