presenters: MediaRes.: refactor, counts, paginate
- refactor so we can count the collections
- rename param 'per' -> 'per_page'
- doc

--- a/app/views/my/_section_filter_demo.html.haml
+++ b/app/views/my/_section_filter_demo.html.haml
@@ -67,7 +67,7 @@
       collections: collections,
       filter_sets: filter_sets,
       page: params[:page],
-      per: params[:per_page]
+      per_page: params[:per_page]
 
 -# the form
 = form_tag("filter_demo", method: "get") do
